# haft

./: .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .quintignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  Taskfile.yaml  esbuild.js  go.mod  go.sum  install.ps1  install.sh  lefthook.yml  package-lock.json  package.json  schema.sql  tsconfig.json
.context/: V6.2_CHAT_TASKS.md  V6.2_TASKS.md  v5-architecture-decisions.md  v5-final-evaluation.md  v5-known-issues.md
.githooks/: pre-commit
.haft/: .gitignore  project.yaml
.quint/: .gitignore  config.yaml  context.md  project.yaml  quint.db  session.md  state.json
.tmp/: hard_fpf_kernel_proposal.md
assurance/: calculator.go  calculator_test.go
commands/: fpf-0-init.md  fpf-1-hypothesize.md  fpf-2-check.md  fpf-3-research.md  fpf-3-test.md  fpf-4-audit.md  fpf-5-decide.md  fpf-decay.md  fpf-query.md  fpf-status.md
db/: migrate.go  migrations.go  migrations_test.go  queries.go  query.sql.go  store.go  store_test.go
desktop/: agents.go  agents_test.go  app.go  authoring.go  authoring_test.go  config.go  config_test.go  debug.go  decision_flow.go  decision_flow_test.go  flows.go  flows_test.go  governance.go  governance_test.go  handoff_test.go  implement_guards_test.go  main.go  (+8 more)
desktop-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/capabilities/: default.json
desktop-tauri/src/: agents.rs  commands_mutate.rs  commands_read.rs  db.rs  lib.rs  main.rs  models.rs  project_readiness.rs  rpc.rs  shell_env.rs  terminal.rs  watcher.rs
(+1027 files in other folders)
